<resources>
    <string name="app_name">AlphabaticalQuiz</string>
    <string name="start_game">Start Game</string>
    <string name="level_1">Time Left</string>
    <string name="score_0">Score: 0</string>
    <string name="_10">10</string>
    <string name="_55_69">what is the capital letter of a?</string>
    <string name="question_1_100">Question- 1/50</string>
    <string name="a">A:</string>
    <string name="_134">b</string>
    <string name="b">B:</string>
    <string name="c">C:</string>
    <string name="d">D:</string>
    <string name="math_quiz_game">Click here to get started</string>
    <string name="high_score">High Score:</string>
</resources>