<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bgm"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math_quiz_game"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:text="@string/start_game"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="SmallSp,TouchTargetSizeCheck,TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gamelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/highScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true"
            tools:ignore="ObsoleteLayoutParam" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/level_1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20sp"
            android:text="@string/score_0"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp">

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:text="@string/_10"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <Button
            android:id="@+id/questionNumberTextView"
            android:layout_width="154dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFF"
            android:text="@string/question_1_100"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="SmallSp,TouchTargetSizeCheck,TextContrastCheck" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="127dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="5sp"
                android:layout_marginTop="150sp"
                android:background="@color/white"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="match_parent"
                android:layout_height="107dp"
                android:layout_below="@+id/linearLayout"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="20sp"
                android:background="#7E000000"
                android:padding="35sp"
                android:text="@string/_55_69"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:ignore="UselessLeaf"
                android:orientation="horizontal">


            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/a"
                    android:textColor="#00695C"
                    android:textSize="30sp"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/option1Button"
                    android:layout_width="369dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_button_background"
                    android:text="@string/_134"
                    android:textColor="#00695C"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,TextSizeCheck,DuplicateSpeakableTextCheck"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/b"
                    android:textColor="#00695C"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/option2Button"
                    android:layout_width="372dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_button_background"
                    android:text="A"
                    android:textColor="#00695C"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText,TouchTargetSizeCheck" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/c"
                    android:textColor="#00695C"
                    android:textSize="30sp"
                    tools:ignore="TextContrastCheck" />


                <Button
                    android:id="@+id/option3Button"
                    android:layout_width="376dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_button_background"
                    android:text="C"
                    android:textColor="#00695C"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/d"
                    android:textColor="#00695C"
                    android:textSize="30sp"
                    tools:ignore="TextContrastCheck"/>

                <Button
                    android:id="@+id/option4Button"
                    android:layout_width="376dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rounded_button_background"
                    android:text="z"
                    android:textColor="#00695C"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText,TouchTargetSizeCheck" />

            </RelativeLayout>


        </LinearLayout>



    </LinearLayout>

</LinearLayout>